# almanac

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  aliases.yaml  deny.toml
.github/workflows/: docker.yml  release.yml  scraper.yml  validate.yml
docs/: api-contracts.md  deployment.md
models/adobe/: firefly-image-5.yaml
models/ai21/: jamba-1.5-large.yaml  jamba-1.5-mini.yaml  jamba-large-1.7.yaml  jamba-mini-1.7.yaml
models/alibaba/: qwen-audio.yaml  qwen-image-2.0-pro.yaml  qwen-image-edit-max.yaml  qwen-image-max.yaml  qwen-vl-max.yaml  qwen-vl-plus-2025-01-25.yaml  qwen-vl-plus.yaml  qwen3-coder-flash.yaml  qwen3-coder-next.yaml  qwen3-coder-plus.yaml  qwen3-max-2026-01-23.yaml  qwen3-max.yaml  qwen3-tts.yaml  qwen3-vl-flash-us.yaml  qwen3-vl-flash.yaml  qwen3-vl-plus.yaml  qwen3.5-0.6b.yaml  qwen3.5-0.8b.yaml  qwen3.5-122b-a10b.yaml  qwen3.5-27b.yaml  qwen3.5-2b.yaml  qwen3.5-35b-a3b.yaml  qwen3.5-397b-a17b.yaml  qwen3.5-4b.yaml  qwen3.5-9b.yaml  qwen3.5-flash-2026-02-23.yaml  qwen3.5-flash.yaml  qwen3.5-omni-flash.yaml  qwen3.5-omni-plus.yaml  qwen3.5-plus-2026-02-15.yaml  qwen3.5-plus.yaml  qwen3.6-flash.yaml  qwen3.6-max-preview.yaml  qwen3.6-plus.yaml  qwen3.7-max.yaml  qwen3.7-plus.yaml  wan-2.1.yaml  wan-2.6.yaml  wan-2.7.yaml  wan2.7-image-pro.yaml
models/amazon/: nova-2-lite-v1.yaml  nova-2-sonic-v1.yaml  nova-canvas-v1.yaml  nova-lite-v1.yaml  nova-micro-v1.yaml  nova-premier-v1.yaml  nova-pro-v1.yaml  nova-reel-v1.yaml  nova-sonic-v1.yaml  titan-embed-text-v1.yaml  titan-embed-text-v2.yaml  titan-image-generator-v2.yaml  titan-text-express-v1.yaml  titan-text-lite-v1.yaml  titan-text-premier-v1.yaml
models/anthropic/: claude-1.3.yaml  claude-2.0.yaml  claude-2.1.yaml  claude-3-5-haiku-20241022.yaml  claude-3-5-sonnet-20240620.yaml  claude-3-5-sonnet-20241022.yaml  claude-3-7-sonnet-20250219.yaml  claude-3-haiku-20240307.yaml  claude-3-opus-20240229.yaml  claude-3-sonnet-20240229.yaml  claude-fable-5.yaml  claude-haiku-4-5-20251001.yaml  claude-instant-1.0.yaml  claude-instant-1.1.yaml  claude-instant-1.2.yaml  claude-mythos-5.yaml  claude-opus-4-20250514.yaml  claude-opus-4-5-20251101.yaml  claude-opus-4-6.yaml  claude-opus-4-7.yaml  claude-opus-4-8.yaml  claude-sonnet-4-20250514.yaml  claude-sonnet-4-5-20250929.yaml  claude-sonnet-4-6.yaml
models/assemblyai/: universal-2.yaml  universal-3-pro.yaml  universal-streaming-multilingual.yaml  universal-streaming.yaml
models/baidu/: ernie-4.5-21b.yaml  ernie-4.5-300b.yaml  ernie-4.5-turbo.yaml  ernie-5.0.yaml  ernie-5.1.yaml  ernie-x1-turbo.yaml  ernie-x1.yaml
models/bfl/: flux-1.1-pro.yaml  flux-2-flex.yaml  flux-2-klein.yaml  flux-2-max.yaml  flux-2-pro.yaml  flux-kontext-max.yaml  flux-kontext.yaml  flux-pro-1.0-fill.yaml  flux-pro-1.1-ultra.yaml
models/bytedance/: doubao-1.5-lite.yaml  doubao-1.5-pro-256k.yaml  doubao-1.5-pro-32k.yaml  doubao-1.5-thinking-pro.yaml  doubao-1.5-vision-pro.yaml  react-dom.yaml  seed-1.6-flash.yaml  seed-1.6-lite.yaml  seed-1.6-thinking.yaml  seed-1.6-vision.yaml  seed-1.8.yaml  seed-2.0-code.yaml  seed-2.0-lite.yaml  seed-2.0-mini.yaml  seed-2.0-pro.yaml  seed3d-2.0.yaml  seedance-1.0.yaml  seedance-1.5-pro.yaml  seedance-2.0.yaml  seedream-4.0.yaml  seedream-4.5.yaml  seedream-5.0-lite.yaml  vmok-remote-entry.c3c6ab68.js.yaml
models/cartesia/: audio.wav.yaml  client.tts.bytes.yaml  client.voices.clone.yaml  e07c00bc-4134-4eae-9ea4-1a55fb45746b.yaml  generated_audio.yaml  model_id.yaml  model_sunsetted.yaml  output_format.yaml  pcm_f32le.yaml  sample_rate.yaml  sonic-2-2025-03-07.yaml  sonic-2-2025-04-16.yaml  sonic-2-2025-05-08.yaml  sonic-2-2025-06-11.yaml  sonic-2.yaml  sonic-3.5.yaml  sonic-3.yaml  sonic-english.yaml  sonic-multilingual.yaml  sonic-turbo-2025-03-07.yaml  sonic-turbo-2025-06-04.yaml  sonic-turbo.yaml  voice.id.yaml  your_api_key.yaml
models/cerebras/: llama3.1-8b.yaml  llama3.3-70b.yaml
models/cohere/: c4ai-aya-expanse-32b.yaml  c4ai-aya-expanse-8b.yaml  c4ai-aya-vision-32b.yaml  c4ai-aya-vision-8b.yaml  cohere-embed-v-4-plan.yaml  cohere-rerank-v4-fast.yaml  cohere-rerank-v4-pro.yaml  cohere-transcribe-03-2026.yaml  cohere.command-a-03-2025.yaml  cohere.command-light-text-v14.yaml  cohere.command-light.yaml  cohere.command-r-16k.yaml  cohere.command-r-plus.yaml  cohere.command-text-v14.yaml  cohere.command.yaml  cohere.embed-english-image-v3.0.yaml  cohere.embed-english-light-image-v3.0.yaml  cohere.embed-english-v3.0.yaml  (+48 more)
providers/: adobe.yaml  ai21.yaml  alibaba.yaml  amazon.yaml  anthropic.yaml  assemblyai.yaml  baidu.yaml  bfl.yaml  bytedance.yaml  cartesia.yaml  cerebras.yaml  cohere.yaml  deepgram.yaml  deepseek.yaml  elevenlabs.yaml  fireworks.yaml  google.yaml  groq.yaml  haiper.yaml  heygen.yaml  hidream.yaml  ibm.yaml  ideogram.yaml  inception.yaml  inflection.yaml  inworld.yaml  jina.yaml  kling.yaml  leonardo.yaml  lightricks.yaml  lmnt.yaml  luma.yaml  meshy.yaml  meta.yaml  microsoft.yaml  minimax.yaml  mistral.yaml  moonshot.yaml  naver.yaml  nomic.yaml  (+28 more)
schema/: model.schema.json  provider.schema.json
scraper/: Cargo.toml  README.md
scraper/src/: catalog.rs  diff.rs  engine.rs  lib.rs  main.rs  model.rs  pricing.rs  spider.rs  writer.rs
scraper/src/spiders/: alibaba.rs  anthropic.rs  bytedance.rs  cartesia.rs  cohere.rs  deepgram.rs  deepseek.rs  doc_page.rs  elevenlabs.rs  google.rs  heygen.rs  ideogram.rs  inception.rs  leonardo.rs  luma.rs  meta.rs  microsoft.rs  mistral.rs  mistral_html.rs  mod.rs  moonshot.rs  openai.rs  perplexity.rs  voyageai.rs  xai.rs  xiaomi.rs  zai.rs
scraper/tests/: engine_test.rs
scripts/: smoke-production.ps1
server/: Cargo.toml
server/src/: cache.rs  catalog.rs  config.rs  error.rs  fuzzy.rs  lib.rs  main.rs  metrics.rs  request.rs  response.rs  scope.rs  state.rs
server/src/routes/: aliases.rs  catalog.rs  compare.rs  health.rs  metrics_route.rs  mod.rs  models.rs  openapi.rs  providers.rs  root.rs  search.rs  stats.rs  suggest.rs  validate.rs
server/tests/: api.rs
validator/: Cargo.toml
validator/src/: main.rs
(+868 files in other folders)
