[workspace]
members = ["server", "validator"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
hex = "0.4.3"
jsonschema = "0.46.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
strsim = "0.11.1"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.52.1", features = ["full"] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
utoipa = { version = "5.4.0", features = ["macros"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
walkdir = "2.5.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
