[workspace]
members = ["server", "validator"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"

[workspace.dependencies]
# Error handling
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Web framework
axum = "0.8.9"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.10", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"

# API docs (OpenAPI)
utoipa = { version = "5.5.0", features = ["macros"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }

# Logging & tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

# Metrics (optional feature)
prometheus = { version = "0.14", default-features = false, features = ["process"] }

# Validation
jsonschema = "0.46.4"

# Hashing / ETag
hex = "0.4.3"
sha2 = "0.11.0"

# Fuzzy search
strsim = "0.11.1"

# Time
time = { version = "0.3.47", features = ["formatting"] }

# Filesystem
walkdir = "2.5.0"

# HTTP client (validator URL checks)
ureq = "3.3.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
