[package]
name = "almanac-scraper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "almanac_scraper"
path = "src/lib.rs"

[[bin]]
name = "scraper"
path = "src/main.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# HTML parsing
scraper = "0.23"

# Async trait support (mirrors kumo's interface for easy future migration)
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }

# Workspace deps
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
walkdir.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3"
