[package]
name = "almanac-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
walkdir = "2.5.0"
anyhow = "1.0.102"
sha2 = "0.11.0"
hex = "0.4.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
strsim = "0.11.1"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
