[package]
name = "almanac-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[features]
metrics = ["dep:prometheus"]

[dependencies]
prometheus = { workspace = true, optional = true }
anyhow.workspace = true
axum.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
strsim.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
utoipa-swagger-ui.workspace = true
walkdir.workspace = true

[dev-dependencies]
tower.workspace = true
