[package]
name = "almanac-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[features]
metrics = ["dep:prometheus"]

[dependencies]
# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Async runtime
tokio.workspace = true

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# API docs (OpenAPI)
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
utoipa-swagger-ui.workspace = true

# Logging & tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Metrics (optional)
prometheus = { workspace = true, optional = true }

# Hashing / ETag
hex.workspace = true
sha2.workspace = true

# Redis client
redis.workspace = true

# Fuzzy search
strsim.workspace = true

# Time
time.workspace = true

# Filesystem
walkdir.workspace = true
