[package]
name = "almanac-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "validate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
ureq.workspace = true
walkdir.workspace = true
