[package]
name = "almanac-validator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "validate"
path = "src/main.rs"

[dependencies]
# Error handling
anyhow.workspace = true

# Serialization
serde_json.workspace = true
serde_yaml.workspace = true

# Validation
jsonschema.workspace = true

# Filesystem
walkdir.workspace = true

# HTTP client (URL reachability checks)
ureq.workspace = true
